# homepage-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  git-restore-mtime.py  nginx.conf  state.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: check_response_code.py  create_env_file.sh  print_test_bin_name.py
.github/ISSUE_TEMPLATE/: refactor-issue-template.md
.github/workflows/: cd.yml  ci.yml  delete-artifacts.yml  delete_artifacts.yml
cli/: test.sh
cli/aws/ec2/: describe_instance_status.sh  describe_instances.sh  start_instances.sh  stop_instances.sh
cli/aws/rds/: access_aws_rds.sh  describe_db_instances.sh  start_db_instance.sh  stop_db_instance.sh
css/: base.css  main.css
deploy/: Dockerfile  access_aws_rds.sh  docker-compose.yml  enable_iam_database_authentication.sh  push_to_dockerhub.sh  push_to_server.sh  rust_app.pem
deploy/nginx/: nginx.conf
dev/: variables.sample.json
develop/: Dockerfile  docker-compose.yml
javascript/: login.js  main.js
migrations/2021-11-13-061517_create_users/: down.sql  up.sql
migrations/2021-11-19-231624_user_title_constraint/: up.sql
migrations/2022-01-23-101039_create_articles/: up.sql
migrations/2022-03-06-072646_create_tmp_articles/: down.sql  up.sql
migrations/2022-03-07-130822_create_editing_articles/: down.sql  up.sql
src/: constants.rs  database.rs  main.rs  schema.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/controller/: article.rs  editing_article.rs  mod.rs
src/file/: create_file.rs
src/file/storage/: sample  sample1  sample22  sample3
src/json_serialization/: article.rs  articles.rs  editing_article.rs  editing_article_without_article_id.rs  editing_articles.rs  login.rs  mod.rs  new_article.rs  new_user.rs  to_do_item.rs  to_do_items.rs
src/logic/: article.rs  editing_article.rs  mod.rs
src/models/: mod.rs
src/models/article/: article.rs  editing_article.rs  mod.rs  new_article.rs  new_editing_article.rs  tmp_article.rs
src/models/item/: item.rs  mod.rs  new_item.rs
src/models/user/: mod.rs  new_user.rs  user.rs
src/my_regex/: s3.rs
src/others/: create_file.rs  mod.rs
src/routes/: mod.rs  path.rs  transaction.rs
src/routes/app/: login.rs  mod.rs
src/routes/article/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/test_utils/: database.rs  mod.rs
src/views/: mod.rs  path.rs  token.rs
templates/: login.html
templates/components/: header.css  header.html
(+38 files in other folders)
