[package]
name = "chapter4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-service = "1.0.6"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = "1"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"