[package]
name = "homepage-api-server-for-editer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors    = "0.6.1"
actix-rt      = "1.0"
actix-service = "1.0.6"
actix-web     = "4.0.1"
anyhow        = "1.0.57"
async-trait   = "0.1.53"
bcrypt        = "0.8.2"
chrono        = "0.4"
diesel        = {version = "1.4.4", features = ["postgres"]}
dotenv        = "0.15.0"
duplicate     = "0.4.0"
futures       = "0.3.7"
mime_guess    = "2.0.4"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = { version = "1.0", default-features = false, features = ["alloc"] }
uuid          = {version = "0.8", features = ["serde", "v4"]}

# Hash
hmac = "0.8.1"
jwt  = "0.9.0"
sha2 = "0.9"

# Logger
env_logger = "0.8.1"
log        = "0.4.11"

# Needed for Postgres.
openssl = "*"

# Regular expression.
regex = "0.1"

# AWS
aws-config = "0.10.1"
aws-sdk-s3 = "0.10.1"